--- a/requirements.txt
+++ b/requirements.txt
@@ -92,7 +92,7 @@ importlib-resources==5.7.1
 ipykernel==6.9.2
 ipython==8.1.1
 ipython-genutils==0.2.0
-ipython-sql==0.4.1
+jupysql
 ipywidgets==7.7.0
 itsdangerous==2.1.2
 itypes==1.2.0
